Fixes trending overflow and closes #7

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-body{
+html, body{
     display: grid;
     grid-template-columns: 20% 60% 20%;
-    grid-template-rows: auto 90%;
+    grid-template-rows: min-content auto; 
     font-family: "Roboto", sans-serif;
     margin: 0;
     height: 100vh;
